# ConsoleArt

./: .gitattributes  .gitignore  ASSETS_LICENSE.md  CMakeLists.txt  ChangeLog.txt  Console.sln  LICENSE  NextVersionTODO.md  README.md  THIRD_PARTY_LICENSES  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  TODO.md  makefile
Console/: Console.vcxproj  Console.vcxproj.filters  ConsoleArt.aps  ConsoleUtility.cpp  ConsoleUtility.h  Image.cpp  Image.h  MainSource.cpp  MyConsole.cpp  MyConsole.h  MyUnixConsole.cpp  MyUnixConsole.h  resource.h
Console/x64/Debug/: vc141.idb
latex-doc/: ConsoleArt.tex
latex-doc/chapters/core/: core.tex
latex-doc/chapters/images/: images.tex
latex-doc/chapters/introduction/: introduction.tex
latex-doc/chapters/sdl/: sdl.tex
libs/ComponentSDL/: ComponentSDL.lib
libs/ComponentSDL/component_sdl_lib/: component_sdl_lib.h
libs/ComponentSDL/inc/: ButtonSDL.h  ComponentSDL.h  ContentPanelSDL.h  ImageButtonSDL.h  LabelSDL.h  SpriteSheetSDL.h  StateSDL.h  StringButtonSDL.h  StringSDL.h  TextSDL.h
libs/SDL/: version.txt
src/: ConsoleUtility.cpp  ConsoleUtility.h  Image.cpp  Image.h  ImageBMP.cpp  ImageBMP.h  MainSource.cpp  MyConsole.cpp  MyConsole.h  UnixConsole.cpp  UnixConsole.h  main_source.cpp
src/assets/: ui_big.cpp  ui_small.cpp
src/consoleArt/: AsciiPrinter.cpp  AsciiPrinter.h  ConsoleArt.hpp  ConsoleArtTools.hpp  Controller.cpp  Controller.h  ControllerCLI.cpp  ControllerCLI.h  MenuUtils.hpp  UnixControllerCLI.cpp  UnixControllerCLI.h
src/consoleArt/abstract/: AbstractAciiConversionMenu.cpp  AbstractAciiConversionState.h  AbstractAsciiPrinter.cpp  AbstractAsciiPrinter.h  AbstractFilterState.cpp  AbstractFilterState.h  AbstractNotifier.cpp  AbstractNotifier.h  AbstractProgressBar.cpp  AbstractProgressBar.h  AbstractState.cpp  AbstractState.h  AbstrctState.cpp  AbstrctState.h
src/consoleArt/asciiTools/: AsciiConverter.cpp  AsciiPrinter.cpp  AsciiPrinter.h
src/consoleArt/cli/: AsciiPrinter.cpp  AsciiPrinter.h  AsciiPrinterCLI.cpp  AsciiPrinterCLI.h  ControllerCLI.cpp  ControllerCLI.h  MenuCLI.cpp  MenuCLI.h  MenusCLI.cpp  MenusCLI.h  MenusCLI.hpp  MessengerCLI.cpp  MessengerCLI.h  NotifierCLI.cpp  NotifierCLI.h  ProgressBarCLI.cpp  ProgressBarCLI.h
src/consoleArt/cliZenity/: MenuZenity.cpp  MenuZenity.h  NotifierZenity.cpp  NotifierZenity.h
src/consoleArt/controller/: Controller.cpp  Controller.h  ControllerCLI.cpp  ControllerCLI.h  ControllerSDL.cpp  ControllerSDL.h  ControllerTFD.cpp  ControllerTFD.h  ControllerZenity.cpp  ControllerZenity.h  StateController.cpp  StateController.h
src/consoleArt/gui/: ButtonSDL.cpp  ButtonSDL.h  ComponentSDL.cpp  ComponentSDL.h
src/consoleArt/guiSDL/: AsciiPrinterSDL.cpp  AsciiPrinterSDL.h  EditImageState.cpp  EditImageState.h  MainState.cpp  MainState.h  NotifierSDL.cpp  NotifierSDL.h  StateManager.h  WindowStates.hpp
src/consoleArt/imageTools/: AsciiConverter.cpp  AsciiConverter.h  Dithering.cpp  Dithering.h  Filter.cpp  Filter.h  ImageTools.cpp  ImageTools.h  SimpleEdit.cpp  SimpleEdit.h
src/consoleArt/interfaces/: AbstrProgressBar.cpp  AbstrProgressBar.h  IMainState.hpp  IMenu.hpp
src/consoleArt/messenger/: Messenger.cpp  Messenger.h
src/consoleArt/tinyFileDialogs/: MenuTFD.h  NotifierTFD.cpp  NotifierTFD.h
src/consoleArt/tools/: AbstractNotifier.h  AsciiConverter.h  ButtonBuilder.cpp  ButtonBuilder.h  ClientTools.cpp  ClientTools.h  ConfigSDL.hpp  ConsoleArtTools.hpp  GeneralTools.hpp  ImageTools.cpp  ImageTools.h  Messenger.h  ServerTools.cpp  ServerTools.h  general_tools.hpp
src/consoleUtils/: ConsoleUtility.cpp  ConsoleUtility.h  UnixConsole.cpp  UnixConsole.h
src/console_art/abstract/: AbstractAciiConversionMenu.cpp  AbstractAciiConversionState.h  AbstractAsciiPrinter.cpp  AbstractAsciiPrinter.h  AbstractFilterState.cpp  AbstractFilterState.h  AbstractNotifier.cpp  AbstractProgressBar.cpp  AbstractState.cpp  AbstractState.h  abstract_ascii_conversion_state.cpp  abstract_ascii_conversion_state.h  abstract_ascii_printer.cpp  abstract_ascii_printer.h  abstract_filter_state.cpp  abstract_filter_state.h  abstract_notifier.cpp  abstract_notifier.h  abstract_progress_bar.cpp  abstract_state.cpp  abstract_state.h
src/console_art/cli/: AsciiPrinterCLI.cpp  AsciiPrinterCLI.h  MenuCLI.cpp  MenuCLI.h  NotifierCLI.cpp  NotifierCLI.h  ProgressBarCLI.cpp  ProgressBarCLI.h  ascii_printer_cli.cpp  ascii_printer_cli.h  menu_cli.cpp  menu_cli.h  notifier_cli.cpp  notifier_cli.h  progress_bar_cli.cpp  progress_bar_cli.h
src/console_art/controller/: Controller.cpp  Controller.h  ControllerCLI.cpp  ControllerCLI.h  (+12 more)
src/controller/: Controller.cpp  Controller.h  MenuUtils.hpp
src/imageUtils/: AsciiConverter.cpp  AsciiConverter.h  ImageConverter.cpp  ImageConverter.h  ImageToolsCLI.cpp  ImageToolsCLI.h
src/images/: Formats.hpp  IAnimated.hpp  IMultiPage.hpp  Image.cpp  Image.h  ImageBMP.cpp  ImageBMP.h  ImageDCX.cpp  ImageDCX.h  ImageGIF.cpp  ImageGIF.h  ImageHDR.cpp  ImageHDR.h  ImageJPG.cpp  ImageJPG.h  ImagePCX.cpp  ImagePCX.h  ImagePNG.cpp  ImagePNG.h  ImagePPM.cpp  ImagePPM.h  ImageTGA.cpp  ImageTGA.h  Pixels.hpp
src/imgUtils/: AsciiConverter.cpp  AsciiConverter.h  ImageBMP.cpp  ImageBMP.h
src/inc/: ColorUtils.h  Colors.h  ConsoleUtility.h  IConsole.hpp  UnixConsole.h  WindowsConsole.h
src/math/: MathUtils.hpp
src/other/: BinomialDistribution.cpp  BinomialDistribution.h  Distribution.cpp  Distribution.h  IDistribution.hpp  MathUtils.hpp  OtherUtils.hpp  PoissonsDistribution.cpp  PoissonsDistribution.h  ScheduleTracker.cpp  ScheduleTracker.h  SheduleTracker.cpp  SheduleTracker.h  StatisticsGeneric.h  StatisticsGeneric.tpp  math_tools.hpp  schedule_tracker.cpp  schedule_tracker.h
x64/Debug/: Console.ilk  ConsoleArt.ilk
x64/Release/: ConsoleArt.iobj  ConsoleArt.ipdb
(+227 files in other folders)
